# images

.github/workflows/: build.yaml
images/adventofcode/: docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
images/adventofcode-backend/: Cargo.toml  Dockerfile
images/adventofcode-backend/src/: app.rs  config.rs  error.rs  main.rs  state.rs
images/adventofcode/public/: config.json
images/adventofcode/src/: config.ts  main.ts  style.css  types.ts
images/computater/: Dockerfile  JSeditor.html  OmJavaScript.html  basics.html  exp.js  html-editor.js  html_emulator.html  httpmet.html  index.html  index.js  index3.html  info.html  javaScript_improved.html  main.js  oppgaver.html  style.css  test.html
images/computater/code/: index_improved.js
images/computater/styles/: mainStyle.css  style_improved.css
images/http-cache/: Dockerfile  download.py  init.sh  nginx.conf
images/info-portal/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
images/info-portal/server/: server.js
images/info-portal/src/: App.jsx
images/media-app/: .dockerignore  index.html  package-lock.json  package.json  vite.config.ts
images/media-app/public/: config.json
images/media-app/src/: activitymanager.ts  config.ts  global.css  index.ts
images/metro/: Dockerfile  constants.js  index.js  loader.js  package-lock.json  package.json
images/metro/modules/: connectivity_test.js  dns.js  fetch_speed.js  metro.js  pfsense.js  test.js
images/nerdboard/: Dockerfile  index.html  package.json  pnpm-lock.yaml
(+9 files in other folders)
