[package]
name = "adventofcode-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
